chore: update gitignore and clean cache

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URI=mysql+pymysql://usuario:senha@host/db
-SECRET_KEY=change_this_key
+DATABASE_URI=mysql+pymysql://usuario:senha@host/db # EXEMPLO DATABASE URI
+SECRET_KEY=change_this_key #EXEMPLO SECRET KEY
